# uwcalendar

./: .gitignore  README.md  app.js  asset-manifest.json  connection_semantics.txt  index.html  package.json  service-worker.js
.gitsecret/keys/: trustdb.gpg
.gitsecret/paths/: mapping.cfg
UWCalendar/: .gitignore
UWCalendar/app/: build.gradle  google-services.json  proguard-rules.pro
android/UWCalendar/: build.gradle
details/: qtr-details.json
opencv/ScheduleCV/: Makefile  OCR.cpp  OCR.h  ScheduleCV.vcxproj.filters
opencv/linux/: CMakeLists.txt  ScheduleCV
opencv/linux/include/: HourHeight.h
opencv/linux/src/: HourHeight.cpp  OCR.cpp  Tools.cpp  main.cpp  tesst.cpp
opencv/opencv-test/: opencv-test.sln
opencv/schedule-cv/: schedule-cv.sln
opencv/win/: ScheduleCV.sln
routes/: index.js
server/: Makefile  README.md  cv.go  server.go
static/css/: main.3be7c47e.css  main.3be7c47e.css.map
static/js/: main.c10a6de0.js  main.c3e27649.js
uwcalendar/node-app/: app.js  package.json
uwgooglecal/node-app/: app.js  client_secret.json  package.json
uwgooglecal/node-old/: client_secret.json  lel.txt  main.js  quickstart.js
uwgooglecal/php/: client_secret.json  index.php  quickstart.php
views/: classes.jade  layout.jade
views/pages/: authorized.ejs  classes.ejs  error.ejs  go.ejs  googleauth.ejs  home.ejs  index.ejs  loggedin.ejs  signup.ejs
views/partials/: head.ejs  header.ejs
web/: README.md  package-lock.json  package.json
web/public/: index.html  manifest.json
web/src/: App.js  App.react.js  constants.js  util.js
(+160 files in other folders)
